# quack

./: Cargo.toml
duck_dns/: Cargo.toml
duck_dns/src/: label.rs  lib.rs  options.rs  responses.rs
public_ip/: Cargo.toml
public_ip/src/: lib.rs
src/: check_ip_opts.rs  main.rs  opts.rs  parse_duration.rs
src/commands/: check_ip.rs  clear.rs  txt.rs  update.rs
